fixed spacing of bookings cards and shadow of landing page cards

--- a/app/assets/stylesheets/components/_my_bookings_card.scss
+++ b/app/assets/stylesheets/components/_my_bookings_card.scss
@@ -18,19 +18,19 @@
 }
 
 #title {
-    margin: 10px 0px 5px 10px;
+    margin: 20px 0px 5px 20px;
     font-weight: 800;
 }
   
 .details1 {
     display: grid;
-    margin-left: 10px;
+    margin: 15px 0px 0px 20px;
     grid-template-columns: 1fr 1fr;
 }
 
 .details2 {
     display: grid;
-    margin-left: 10px;
+    margin: 15px 0px 0px 20px;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
