--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,7 +22,7 @@ i {
     background-color: #ffffff;
     margin: 60px 15px;
     padding: 40px 15px;
-    box-shadow: 5px 10px 18px #888888;
+    box-shadow: 0px 4px 24px rgba($color: #000000, $alpha: 0.3);
     border-radius: 5px;
 }
 
